fix align to grid

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -408,7 +408,7 @@ $blockquote-border: 8px solid scale-color($gainsboro, $lightness: 0%);
 // $block-grid-default-spacing: rem-calc(20);
 $block-grid-default-spacing: rem-calc(40);
 // $align-block-grid-to-grid: false;
-$align-block-grid-to-grid: true;
+$align-block-grid-to-grid: false;
 // Enables media queries for block-grid classes. Set to false if writing semantic HTML.
 // $block-grid-media-queries: true;
 
